generate/mvDeviceManager/Include/mvDeviceManager.h


struct ChannelData
{
	int iChannelOffset;
	int iLinePitch;
	int iPixelPitch;
	char szChannelDesc[DEFAULT_STRING_SIZE_LIMIT];
#ifdef DOTNET_ONLY_CODE
	int getiChannelOffset( void ) const { return iChannelOffset; }
	int getiLinePitch( void ) const { return iLinePitch; }
	int getiPixelPitch( void ) const { return iPixelPitch; }
	std::string getszChannelDesc( void ) const { return std::string(szChannelDesc); }
#endif 
} ATTR_PACK;
	typedef struct ChannelData ChannelData;
struct ImageBuffer
{
	int iBytesPerPixel;
	int iHeight;
	int iWidth;
	TImageBufferPixelFormat pixelFormat;
	int iSize;
	void* vpData;
	int iChannelCount;
	ChannelData* pChannels;
#ifdef DOTNET_ONLY_CODE
	int getiBytesPerPixel( void ) const { return iBytesPerPixel; }
	int getiHeight( void ) const { return iHeight; }
	int getiWidth( void ) const { return iWidth; }
	TImageBufferPixelFormat getPixelFormat( void ) const { return pixelFormat; }
	int getiSize( void ) const { return iSize; }
	unsigned char* getvpData( void ) const { return (unsigned char*)vpData; }
	int getiChannelCount( void ) const { return iChannelCount; }
	ChannelData* getChannel( unsigned int index ) const { return &pChannels[index]; }
#endif 
} ATTR_PACK;
	struct RequestInfo
	{
		int frameID;
		int frameNr;
		int exposeStart_us;
		int exposeTime_us;
		int transferDelay_us;
		double gain_dB;
		int timeStamp_us;
		double imageAverage;
		int videoChannel;
		TCameraOutput cameraOutputUsed;
		int lineCounter;
		double missingData_pc;
	} ATTR_PACK;
	struct RequestResult
	{
		TRequestResult result;
		TRequestState state;
	} ATTR_PACK;
struct EventData
{
	unsigned int count;
	unsigned int timestamp_lowPart;
	unsigned int timestamp_highPart;
#ifdef DOTNET_ONLY_CODE
	unsigned int getCount( void ) const { return count; }
	unsigned int getTimestamp_lowPart( void ) const { return timestamp_lowPart; }
	unsigned int getTimestamp_highPart( void ) const { return timestamp_highPart; }
#endif 
} ATTR_PACK;
enum TImageRequestParam
{
	irpPixelFormat = 0,
	irpResult = 1,
	irpState = 2,
	irpCameraOutputUsed = 3
};
enum TImpactBufferFlag
{
	ibfNone = 0x0,
	ibfUseRequestMemory = 0x1,
	ibfRecycleBufHandle = 0x2
};
typedef int HDEV;
typedef int HDRV;
typedef int HLIST;
typedef int HOBJ;
	typedef struct EventData MVIMPACT_DEPRECATED_C( EventData );
	typedef struct ImageBuffer ImageBuffer;
	typedef struct RequestInfo RequestInfo;
	typedef struct RequestResult RequestResult;
	typedef enum TImageRequestParam TImageRequestParam;
	typedef enum TImpactBufferFlag TImpactBufferFlag;
	typedef int HDMR;
		#define INFO_STRING_SIZE (38)
	enum TOBJ_HandleCheckMode 
	{
		hcmOwnerList	= 0x1,
		hcmFull			= 0x2
	};
	enum TOBJ_StringQuery 
	{
		sqObjName				= 0,
		sqObjDocString			= 1,
		sqListContentDescriptor	= 2,
		sqPropVal				= 3,
		sqPropFormatString		= 4,
		sqMethParamString		= 5,
		sqObjDisplayName		= 6
	};
	struct TDMR_DeviceInfo 
	{
		char serial[INFO_STRING_SIZE];
		char family[INFO_STRING_SIZE];
		char product[INFO_STRING_SIZE];
		int firmwareVersion;
		int deviceId;
	} ATTR_PACK;
	enum TDMR_DeviceSearchMode 
	{ 
		dmdsmSerial		= 1,
		dmdsmFamily		= 2,
		dmdsmProduct	= 3,
		dmdsmUseDevID	= 0x8000
	};
	enum TDMR_ListType 
	{
		dmltUndefined = -1,
		dmltSetting = 0,
		dmltRequest = 1,
		dmltRequestCtrl = 2,
		dmltInfo = 3,
		dmltStatistics = 4,
		dmltSystemSettings = 5,
		dmltIOSubSystem = 6,
		dmltRTCtr = 7,
		dmltCameraDescriptions = 8,
		dmltDeviceSpecificData = 9,
		dmltEventSubSystemSettings = 10,
		dmltEventSubSystemResults = 11,
		dmltImageMemoryManager = 12
	};
		typedef enum TOBJ_HandleCheckMode TOBJ_HandleCheckMode;
		typedef enum TOBJ_StringQuery TOBJ_StringQuery;
		typedef struct TDMR_DeviceInfo TDMR_DeviceInfo;
		typedef enum TDMR_ListType TDMR_ListType;
		typedef enum TDMR_DeviceSearchMode TDMR_DeviceSearchMode;
	TDMR_ERROR DMR_CALL DMR_Init( HDMR* pHDmr );
	TDMR_ERROR DMR_CALL DMR_Close( void );
	TDMR_ERROR DMR_CALL DMR_GetDevice( HDEV* pHDev, TDMR_DeviceSearchMode searchMode, const char* pSearchString, unsigned int devNr, char wildcard );
	TDMR_ERROR DMR_CALL DMR_GetDeviceCount( unsigned int* pDevCnt );
	TDMR_ERROR DMR_CALL DMR_OpenDevice( HDEV hDev, HDRV* pHDrv );
	TDMR_ERROR DMR_CALL DMR_CloseDevice( HDRV hDrv, HDEV hDev );
	TDMR_ERROR DMR_CALL DMR_GetDeviceInfo( unsigned int devNr, TDMR_DeviceInfo* pInfo, size_t infoSize );
	TDMR_ERROR DMR_CALL DMR_GetDriverHandle( HDEV hDev, HDRV* pHDrv );
	TDMR_ERROR DMR_CALL DMR_UpdateDeviceList( unsigned int reserved, int reserved2 );
	TDMR_ERROR DMR_CALL DMR_CreateSetting( HDRV hDrv, const char* pName, const char* pParentName, HLIST* pNewID );
	TDMR_ERROR DMR_CALL DMR_CreateRequestControl( HDRV hDrv, const char* pName, const char* pParentName, HLIST* pNewID, int* pRequestCtrl );
	TDMR_ERROR DMR_CALL DMR_DeleteList( HDRV hDrv, const char* pName, TDMR_ListType type );
	TDMR_ERROR DMR_CALL DMR_FindList( HDRV hDrv, const char* pName, TDMR_ListType type, unsigned int flags, HLIST* phDevList );
	TDMR_ERROR DMR_CALL DMR_AcquisitionStart( HDRV hDrv );
	TDMR_ERROR DMR_CALL DMR_AcquisitionStop( HDRV hDrv );
	TDMR_ERROR DMR_CALL DMR_ImageRequestReset( HDRV hDrv, int requestCtrl, int mode );
	TDMR_ERROR DMR_CALL DMR_ImageRequestSingle( HDRV hDrv, int requestCtrl, int* pRequestUsed );
	TDMR_ERROR DMR_CALL DMR_ImageRequestUnlock( HDRV hDrv, int requestNr );
	TDMR_ERROR DMR_CALL DMR_ImageRequestConfigure( HDRV hDrv, int requestNr, int reserved, void* pReserved );
	TDMR_ERROR DMR_CALL DMR_ImageRequestWaitFor( HDRV hDrv, int timeout_ms, int queueNr, int* requestNr );
	TDMR_ERROR DMR_CALL DMR_GetImageRequestBuffer( HDRV hDrv, int requestNr, ImageBuffer** ppBuffer );
	TDMR_ERROR DMR_CALL DMR_GetImageRequestBufferData( HDRV hDrv, int requestNr, int* pBytesPerPixel, int* pChannelCount, int* pHeight, int* pWidth, int* pSize, TImageBufferPixelFormat* pPixelFormat, void** ppData );
	TDMR_ERROR DMR_CALL DMR_GetImageRequestBufferChannelData( HDRV hDrv, int requestNr, int channelNr, int* pChannelOffset, int* pLinePitch, int* pPixelPitch, char* pChannelDesc, size_t channelDescSize );
	TDMR_ERROR DMR_CALL DMR_GetImageRequestBufferImageData( HDRV hDrv, int requestNr, int xOff, int yOff, int width, int height, char* pBuf, size_t bufSize );
	TDMR_ERROR DMR_CALL DMR_SetImageRequestBufferImageData( HDRV hDrv, int requestNr, int xOff, int yOff, int width, int height, char* pBuf, size_t bufSize );
	TDMR_ERROR DMR_CALL DMR_GetImageRequestInfoEx( HDRV hDrv, int requestNr, RequestInfo* pInfo, size_t infoSize, int reserved, int reserved2 );
	TDMR_ERROR DMR_CALL DMR_GetImageRequestResultEx( HDRV hDrv, int requestNr, RequestResult* pResult, size_t resultSize, int reserved, int reserved2 );
	TDMR_ERROR DMR_CALL DMR_GetImageRequestParamS( HDRV hDrv, int requestNr, TImageRequestParam param, char* pBuf, size_t bufSize );
	TDMR_ERROR DMR_CALL DMR_LoadRTCtrProgram( HDRV hDrv, HLIST hRTCtrList );
	TDMR_ERROR DMR_CALL DMR_SaveRTCtrProgram( HDRV hDrv, HLIST hRTCtrList );
	TDMR_ERROR DMR_CALL DMR_LoadSetting( HDRV hDrv, const char* pName, TStorageFlag storageflags, TScope scope );
	TDMR_ERROR DMR_CALL DMR_SaveSetting( HDRV hDrv, const char* pName, TStorageFlag storageflags, TScope scope );
	TDMR_ERROR DMR_CALL DMR_LoadSettingFromDefault( HDRV hDrv, TScope scope );
	TDMR_ERROR DMR_CALL DMR_SaveSettingToDefault( HDRV hDrv, TScope scope );
	TDMR_ERROR DMR_CALL DMR_SaveSystemToDefault( HDRV hDrv, TScope scope );
	TDMR_ERROR DMR_CALL DMR_ExportCameraDescription( HDRV hDrv, HLIST hCameraDescList );
	TDMR_ERROR DMR_CALL DMR_ImportCameraDescription( HDRV hDrv, HLIST hCameraDescList );
	TDMR_ERROR DMR_CALL DMR_CopyCameraDescription( HDRV hDrv, HLIST hCameraDescList, const char* pNewName );
	TDMR_ERROR DMR_CALL DMR_SetDeviceID( HDEV hDev, int newID );
	TDMR_ERROR DMR_CALL DMR_UpdateFirmware( HDEV hDev );
	TDMR_ERROR DMR_CALL DMR_UpdateDigitalInputs( HDRV hDrv );
	TDMR_ERROR DMR_CALL DMR_UpgradeDeviceFeatures( HDEV hDev, const char* pLicenceFilename, int reserved, int reserved2 );
	TDMR_ERROR DMR_CALL DMR_CreateUserDataEntry( HDEV hDev, HLIST* pEntry );
	TDMR_ERROR DMR_CALL DMR_DeleteUserDataEntry( HDEV hDev, HLIST hEntry );
	TDMR_ERROR DMR_CALL DMR_WriteUserDataToHardware( HDEV hDev );
	MVIMPACT_DEPRECATED_C( TDMR_ERROR DMR_CALL DMR_EventWaitFor( HDRV hDrv, int timeout_ms, TDeviceEventType mask, int reserved, int reserved2, TDeviceEventType* pResultType ) );
	MVIMPACT_DEPRECATED_C( TDMR_ERROR DMR_CALL DMR_EventGetData( HDRV hDrv, TDeviceEventType type, int reserved, int reserved2, EventData* pResult, size_t resultSize ) );
	TDMR_ERROR DMR_CALL DMR_AllocImageRequestBufferDesc( ImageBuffer** ppBuffer, int channelCount );
	TDMR_ERROR DMR_CALL DMR_ReleaseImageRequestBufferDesc( ImageBuffer** ppBuffer );
	TDMR_ERROR DMR_CALL DMR_CopyImageRequestBufferDesc( const ImageBuffer* pSrc, ImageBuffer** ppDst, int flags );
	TDMR_ERROR DMR_CALL DMR_AllocImageBuffer( ImageBuffer** ppBuffer, TImageBufferPixelFormat pixelFormat, int width, int height );
	TDMR_ERROR DMR_CALL DMR_ReleaseImageBuffer( ImageBuffer** ppBuffer );
	TDMR_ERROR DMR_CALL DMR_CopyImageBuffer( const ImageBuffer* pSrc, ImageBuffer** ppDst, int flags );
	const char* DMR_CALL DMR_ErrorCodeToString( int errorCode );
	TPROPHANDLING_ERROR DMR_CALL OBJ_IsSettingAvailable( const char* pName, TStorageFlag storageflags, TScope scope );
	TPROPHANDLING_ERROR DMR_CALL OBJ_DeleteSetting( const char* pName, TStorageFlag storageflags, TScope scope );
	TPROPHANDLING_ERROR DMR_CALL OBJ_CheckHandle( HOBJ hObj, TOBJ_HandleCheckMode mode );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetChangedCounter( HOBJ hObj, unsigned int* pChangedCounter );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetChangedCounterAttr( HOBJ hObj, unsigned int* pChangedCounter );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetContentDesc( HOBJ hList, char* pBuf, size_t bufSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetDocString( HOBJ hObj, char* pBuf, size_t bufSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetFlags( HOBJ hObj, TComponentFlag* pFlags );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetFlagsS( HOBJ hObj, const char* pSeparator, char* pBuf, size_t bufSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetName( HOBJ hObj, char* pBuf, size_t bufSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetDisplayName( HOBJ hObj, char* pBuf, size_t bufSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetType( HOBJ hObj, TComponentType* pType );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetTypeS( HOBJ hObj, char* pBuf, size_t bufSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetVisibility( HOBJ hObj, TComponentVisibility* pVisibility );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetVisibilityS( HOBJ hObj, char* pBuf, size_t bufSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_VisibilityToString( TComponentVisibility visibility, char* pBuf, size_t bufSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_IsDefault( HOBJ hObj, unsigned int* pResult );
	TPROPHANDLING_ERROR DMR_CALL OBJ_RestoreDefault( HOBJ hObj );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetHandle( HLIST hList, const char* pPathAndObjName, HOBJ* phObj );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetSelectedFeatures( HOBJ hObj, int index, HOBJ* pFeatures, size_t* pFeatureCount );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetSelectingFeatures( HOBJ hObj, int index, HOBJ* pFeatures, size_t* pFeatureCount );
	typedef void (*CBOBJChanged)(	
									HOBJ hObj,
									void* pUserData );
	TPROPHANDLING_ERROR DMR_CALL OBJ_CreateCallback( TCallbackType type, CBOBJChanged pMeth, void* pUserData, CallbackHandle* phCallback );
	TPROPHANDLING_ERROR DMR_CALL OBJ_DeleteCallback( CallbackHandle hCallback );
	TPROPHANDLING_ERROR DMR_CALL OBJ_AttachCallback( HOBJ hObj, CallbackHandle hCallback );
	TPROPHANDLING_ERROR DMR_CALL OBJ_DetachCallback( HOBJ hObj, CallbackHandle hCallback );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetFirstSibling( HOBJ hObj, HOBJ* pFirstSibling );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetNextSibling( HOBJ hObj, HOBJ* pNextSibling );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetLastSibling( HOBJ hObj, HOBJ* pLastSibling );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetFirstChild( HOBJ hObj, HOBJ* pFirstChild );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetParent( HOBJ hObj, HOBJ* pParent );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetMaxValCount( HOBJ hProp, unsigned int* pValCount );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetValCount( HOBJ hProp, unsigned int* pValCount );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetValCount( HOBJ hProp, unsigned int valCount );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetBinary( HOBJ hProp, char* pBuf, unsigned int bufSize, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetBinary( HOBJ hProp, const char* pBuf, unsigned int bufSize, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetBinaryBufferSize( HOBJ hProp, unsigned int* pBufSize, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetBinaryBufferMaxSize( HOBJ hProp, unsigned int* pBufSize );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetF( HOBJ hProp, double* pVal, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetFArray( HOBJ hProp, double* pVal, unsigned int valCount, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetF( HOBJ hProp, double val, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_SetFArray( HOBJ hProp, const double* pVal, unsigned int valCount, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetFDictEntry( HOBJ hProp, char* pTranslationString, size_t translationStringBufSize, double* pValue, int index );
	TPROPHANDLING_ERROR DMR_CALL OBJ_GetFDictEntries( HOBJ hProp, char** pTranslationArray, size_t sizePerTranslationBuf, double* pValArray, size_t arraySizes );