_mvDeviceManager.pxd

from _mvDriverBaseEnums cimport *
from _mvPropHandlingDatatypes cimport *
ctypedef long long int int64_type

# This code was automatically generated by CWrap version 0.0.0

cdef extern from "mvDeviceManager/Include/mvDeviceManager.h":

    cdef struct ChannelData:
        int iChannelOffset
        int iLinePitch
        int iPixelPitch
        char szChannelDesc[8192]

    ctypedef ChannelData ChannelData

    cdef struct ImageBuffer:
        int iBytesPerPixel
        int iHeight
        int iWidth
        TImageBufferPixelFormat pixelFormat
        int iSize
        void *vpData
        int iChannelCount
        ChannelData *pChannels

    cdef struct RequestInfo:
        int frameID
        int frameNr
        int exposeStart_us
        int exposeTime_us
        int transferDelay_us
        double gain_dB
        int timeStamp_us
        double imageAverage
        int videoChannel
        TCameraOutput cameraOutputUsed
        int lineCounter
        double missingData_pc

    cdef struct RequestResult:
        TRequestResult result
        TRequestState state

    cdef struct EventData:
        unsigned int count
        unsigned int timestamp_lowPart
        unsigned int timestamp_highPart

    cdef enum TImageRequestParam:
        irpPixelFormat
        irpResult
        irpState
        irpCameraOutputUsed

    cdef enum TImpactBufferFlag:
        ibfNone
        ibfUseRequestMemory
        ibfRecycleBufHandle

    ctypedef int HDEV

    ctypedef int HDRV

    ctypedef int HLIST

    ctypedef int HOBJ

    ctypedef EventData EventData

    ctypedef ImageBuffer ImageBuffer

    ctypedef RequestInfo RequestInfo

    ctypedef RequestResult RequestResult

    ctypedef TImageRequestParam TImageRequestParam

    ctypedef TImpactBufferFlag TImpactBufferFlag

    ctypedef int HDMR

    size_t INFO_STRING_SIZE
    cdef enum TOBJ_HandleCheckMode:
        hcmOwnerList
        hcmFull

    cdef enum TOBJ_StringQuery:
        sqObjName
        sqObjDocString
        sqListContentDescriptor
        sqPropVal
        sqPropFormatString
        sqMethParamString
        sqObjDisplayName

    cdef enum TDMR_DeviceInfoType:
        dmditDeviceInfoStructure
        dmditDeviceIsInUse
        dmdithDeviceDriver

    cdef struct TDMR_DeviceInfo:
        char serial[38]
        char family[38]
        char product[38]
        int firmwareVersion
        int deviceId

    cdef enum TDMR_DeviceSearchMode:
        dmdsmSerial
        dmdsmFamily
        dmdsmProduct
        dmdsmUseDevID

    cdef enum TDMR_ListType:
        dmltUndefined
        dmltSetting
        dmltRequest
        dmltRequestCtrl
        dmltInfo
        dmltStatistics
        dmltSystemSettings
        dmltIOSubSystem
        dmltRTCtr
        dmltCameraDescriptions
        dmltDeviceSpecificData
        dmltEventSubSystemSettings
        dmltEventSubSystemResults
        dmltImageMemoryManager

    ctypedef TOBJ_HandleCheckMode TOBJ_HandleCheckMode

    ctypedef TOBJ_StringQuery TOBJ_StringQuery

    ctypedef TDMR_DeviceInfo TDMR_DeviceInfo

    ctypedef TDMR_ListType TDMR_ListType

    ctypedef TDMR_DeviceSearchMode TDMR_DeviceSearchMode

    TDMR_ERROR DMR_Init(HDMR *pHDmr)

    TDMR_ERROR DMR_Close()

    TDMR_ERROR DMR_GetDevice(HDEV *pHDev, TDMR_DeviceSearchMode searchMode, const char *pSearchString, unsigned int devNr, char wildcard)

    TDMR_ERROR DMR_GetDeviceCount(unsigned int *pDevCnt)

    TDMR_ERROR DMR_OpenDevice(HDEV hDev, HDRV *pHDrv)

    TDMR_ERROR DMR_CloseDevice(HDRV hDrv, HDEV hDev)

    TDMR_ERROR DMR_GetDeviceInfo(unsigned int devNr, TDMR_DeviceInfo *pInfo, size_t infoSize)

    TDMR_ERROR DMR_GetDeviceInfoEx(HDEV hDev, TDMR_DeviceInfoType infoType, void* pInfo, size_t* pInfoSize)

    TDMR_ERROR DMR_GetDriverHandle(HDEV hDev, HDRV *pHDrv)

    TDMR_ERROR DMR_UpdateDeviceList(unsigned int reserved, int reserved2)

    TDMR_ERROR DMR_CreateSetting(HDRV hDrv, const char *pName, const char *pParentName, HLIST *pNewID)

    TDMR_ERROR DMR_CreateRequestControl(HDRV hDrv, const char *pName, const char *pParentName, HLIST *pNewID, int *pRequestCtrl)

    TDMR_ERROR DMR_DeleteList(HDRV hDrv, const char *pName, TDMR_ListType type)

    TDMR_ERROR DMR_FindList(HDRV hDrv, const char *pName, TDMR_ListType type, unsigned int flags, HLIST *phDevList)

    TDMR_ERROR DMR_AcquisitionStart(HDRV hDrv)

    TDMR_ERROR DMR_AcquisitionStop(HDRV hDrv)

    TDMR_ERROR DMR_ImageRequestReset(HDRV hDrv, int requestCtrl, int mode)

    TDMR_ERROR DMR_ImageRequestSingle(HDRV hDrv, int requestCtrl, int *pRequestUsed)

    TDMR_ERROR DMR_ImageRequestUnlock(HDRV hDrv, int requestNr)

    TDMR_ERROR DMR_ImageRequestConfigure(HDRV hDrv, int requestNr, int reserved, void *pReserved)

    TDMR_ERROR DMR_ImageRequestWaitFor(HDRV hDrv, int timeout_ms, int queueNr, int *requestNr) nogil

    TDMR_ERROR DMR_GetImageRequestBuffer(HDRV hDrv, int requestNr, ImageBuffer **ppBuffer)

    TDMR_ERROR DMR_GetImageRequestBufferData(HDRV hDrv, int requestNr, int *pBytesPerPixel, int *pChannelCount, int *pHeight, int *pWidth, int *pSize, TImageBufferPixelFormat *pPixelFormat, void **ppData)

    TDMR_ERROR DMR_GetImageRequestBufferChannelData(HDRV hDrv, int requestNr, int channelNr, int *pChannelOffset, int *pLinePitch, int *pPixelPitch, char *pChannelDesc, size_t channelDescSize)

    TDMR_ERROR DMR_GetImageRequestBufferImageData(HDRV hDrv, int requestNr, int xOff, int yOff, int width, int height, char *pBuf, size_t bufSize)

    TDMR_ERROR DMR_SetImageRequestBufferImageData(HDRV hDrv, int requestNr, int xOff, int yOff, int width, int height, char *pBuf, size_t bufSize)

    TDMR_ERROR DMR_GetImageRequestInfoEx(HDRV hDrv, int requestNr, RequestInfo *pInfo, size_t infoSize, int reserved, int reserved2)

    TDMR_ERROR DMR_GetImageRequestResultEx(HDRV hDrv, int requestNr, RequestResult *pResult, size_t resultSize, int reserved, int reserved2)

    TDMR_ERROR DMR_GetImageRequestParamS(HDRV hDrv, int requestNr, TImageRequestParam param, char *pBuf, size_t bufSize)

    TDMR_ERROR DMR_LoadRTCtrProgram(HDRV hDrv, HLIST hRTCtrList)

    TDMR_ERROR DMR_SaveRTCtrProgram(HDRV hDrv, HLIST hRTCtrList)

    TDMR_ERROR DMR_LoadSetting(HDRV hDrv, const char *pName, TStorageFlag storageflags, TScope scope)

    TDMR_ERROR DMR_SaveSetting(HDRV hDrv, const char *pName, TStorageFlag storageflags, TScope scope)

    TDMR_ERROR DMR_LoadSettingFromDefault(HDRV hDrv, TScope scope)

    TDMR_ERROR DMR_SaveSettingToDefault(HDRV hDrv, TScope scope)

    TDMR_ERROR DMR_SaveSystemToDefault(HDRV hDrv, TScope scope)

    TDMR_ERROR DMR_ExportCameraDescription(HDRV hDrv, HLIST hCameraDescList)

    TDMR_ERROR DMR_ImportCameraDescription(HDRV hDrv, HLIST hCameraDescList)

    TDMR_ERROR DMR_CopyCameraDescription(HDRV hDrv, HLIST hCameraDescList, const char *pNewName)

    TDMR_ERROR DMR_SetDeviceID(HDEV hDev, int newID)

    TDMR_ERROR DMR_UpdateFirmware(HDEV hDev)

    TDMR_ERROR DMR_UpdateDigitalInputs(HDRV hDrv)

    TDMR_ERROR DMR_UpgradeDeviceFeatures(HDEV hDev, const char *pLicenceFilename, int reserved, int reserved2)

    TDMR_ERROR DMR_CreateUserDataEntry(HDEV hDev, HLIST *pEntry)

    TDMR_ERROR DMR_DeleteUserDataEntry(HDEV hDev, HLIST hEntry)

    TDMR_ERROR DMR_WriteUserDataToHardware(HDEV hDev)

    TDMR_ERROR DMR_EventWaitFor(HDRV hDrv, int timeout_ms, TDeviceEventType mask, int reserved, int reserved2, TDeviceEventType *pResultType)

    TDMR_ERROR DMR_EventGetData(HDRV hDrv, TDeviceEventType type, int reserved, int reserved2, EventData *pResult, size_t resultSize)

    TDMR_ERROR DMR_AllocImageRequestBufferDesc(ImageBuffer **ppBuffer, int channelCount)

    TDMR_ERROR DMR_ReleaseImageRequestBufferDesc(ImageBuffer **ppBuffer)

    TDMR_ERROR DMR_CopyImageRequestBufferDesc(const ImageBuffer *pSrc, ImageBuffer **ppDst, int flags)

    TDMR_ERROR DMR_AllocImageBuffer(ImageBuffer **ppBuffer, TImageBufferPixelFormat pixelFormat, int width, int height)

    TDMR_ERROR DMR_ReleaseImageBuffer(ImageBuffer **ppBuffer)

    TDMR_ERROR DMR_CopyImageBuffer(const ImageBuffer *pSrc, ImageBuffer **ppDst, int flags)

    const char *DMR_ErrorCodeToString(int errorCode)

    TPROPHANDLING_ERROR OBJ_IsSettingAvailable(const char *pName, TStorageFlag storageflags, TScope scope)

    TPROPHANDLING_ERROR OBJ_DeleteSetting(const char *pName, TStorageFlag storageflags, TScope scope)

    TPROPHANDLING_ERROR OBJ_CheckHandle(HOBJ hObj, TOBJ_HandleCheckMode mode)

    TPROPHANDLING_ERROR OBJ_GetChangedCounter(HOBJ hObj, unsigned int *pChangedCounter)

    TPROPHANDLING_ERROR OBJ_GetChangedCounterAttr(HOBJ hObj, unsigned int *pChangedCounter)

    TPROPHANDLING_ERROR OBJ_GetContentDesc(HOBJ hList, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_GetDocString(HOBJ hObj, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_GetFlags(HOBJ hObj, TComponentFlag *pFlags)

    TPROPHANDLING_ERROR OBJ_GetFlagsS(HOBJ hObj, const char *pSeparator, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_GetName(HOBJ hObj, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_GetDisplayName(HOBJ hObj, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_GetType(HOBJ hObj, TComponentType *pType)

    TPROPHANDLING_ERROR OBJ_GetTypeS(HOBJ hObj, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_GetVisibility(HOBJ hObj, TComponentVisibility *pVisibility)

    TPROPHANDLING_ERROR OBJ_GetVisibilityS(HOBJ hObj, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_VisibilityToString(TComponentVisibility visibility, char *pBuf, size_t bufSize)

    TPROPHANDLING_ERROR OBJ_IsDefault(HOBJ hObj, unsigned int *pResult)

    TPROPHANDLING_ERROR OBJ_RestoreDefault(HOBJ hObj)

    TPROPHANDLING_ERROR OBJ_GetHandle(HLIST hList, const char *pPathAndObjName, HOBJ *phObj)

    TPROPHANDLING_ERROR OBJ_GetSelectedFeatures(HOBJ hObj, int index, HOBJ *pFeatures, size_t *pFeatureCount)

    TPROPHANDLING_ERROR OBJ_GetSelectingFeatures(HOBJ hObj, int index, HOBJ *pFeatures, size_t *pFeatureCount)

    ctypedef void (*CBOBJChanged)(HOBJ, void *)

    TPROPHANDLING_ERROR OBJ_CreateCallback(TCallbackType type, CBOBJChanged pMeth, void *pUserData, CallbackHandle *phCallback)

    TPROPHANDLING_ERROR OBJ_DeleteCallback(CallbackHandle hCallback)

    TPROPHANDLING_ERROR OBJ_AttachCallback(HOBJ hObj, CallbackHandle hCallback)

    TPROPHANDLING_ERROR OBJ_DetachCallback(HOBJ hObj, CallbackHandle hCallback)

    TPROPHANDLING_ERROR OBJ_GetFirstSibling(HOBJ hObj, HOBJ *pFirstSibling)

    TPROPHANDLING_ERROR OBJ_GetNextSibling(HOBJ hObj, HOBJ *pNextSibling)

    TPROPHANDLING_ERROR OBJ_GetLastSibling(HOBJ hObj, HOBJ *pLastSibling)

    TPROPHANDLING_ERROR OBJ_GetFirstChild(HOBJ hObj, HOBJ *pFirstChild)

    TPROPHANDLING_ERROR OBJ_GetParent(HOBJ hObj, HOBJ *pParent)

    TPROPHANDLING_ERROR OBJ_GetMaxValCount(HOBJ hProp, unsigned int *pValCount)

    TPROPHANDLING_ERROR OBJ_GetValCount(HOBJ hProp, unsigned int *pValCount)

    TPROPHANDLING_ERROR OBJ_SetValCount(HOBJ hProp, unsigned int valCount)

    TPROPHANDLING_ERROR OBJ_GetBinary(HOBJ hProp, char *pBuf, unsigned int bufSize, int index)

    TPROPHANDLING_ERROR OBJ_SetBinary(HOBJ hProp, const char *pBuf, unsigned int bufSize, int index)

    TPROPHANDLING_ERROR OBJ_GetBinaryBufferSize(HOBJ hProp, unsigned int *pBufSize, int index)

    TPROPHANDLING_ERROR OBJ_GetBinaryBufferMaxSize(HOBJ hProp, unsigned int *pBufSize)

    TPROPHANDLING_ERROR OBJ_GetF(HOBJ hProp, double *pVal, int index)

    TPROPHANDLING_ERROR OBJ_GetFArray(HOBJ hProp, double *pVal, unsigned int valCount, int index)

    TPROPHANDLING_ERROR OBJ_SetF(HOBJ hProp, double val, int index)

    TPROPHANDLING_ERROR OBJ_SetFArray(HOBJ hProp, const double *pVal, unsigned int valCount, int index)

    TPROPHANDLING_ERROR OBJ_GetFDictEntry(HOBJ hProp, char *pTranslationString, size_t translationStringBufSize, double *pValue, int index)

    TPROPHANDLING_ERROR OBJ_GetFDictEntries(HOBJ hProp, char **pTranslationArray, size_t sizePerTranslationBuf, double *pValArray, size_t arraySizes)
